[tool.poetry]
name = "kube-agent"
version = "0.1.0"
description = "A Kubernetes copilot agent powered by OpenAI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.33"
kubernetes = "^29.0.0"
click = "^8.1"
python-dotenv = "^1.0"
tiktoken = "^0.8"
numpy = "^2.1.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kube-agent = "kube_agent.cli:main"
