[tool.poetry]
name = "kube-agent"
version = "0.1.2"
description = "Kubernetes Copilot"
authors = ["Pengfei Ni <feiskyer@gmail.com>"]
readme = "README.md"
packages = [{include = "kube_agent"}]
homepage = "https://github.com/feiskyer/kube-agent"
repository = "https://github.com/feiskyer/kube-agent"
keywords = ["kubernetes", "copilot", "openai", "chatgpt", "agent", "autogen"]

[tool.poetry.scripts]
kube-agent = 'kube_agent.cli:main'

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = ">=2.32.3"
openai = ">1"
tiktoken = ">=0.8.0"
lark = "==1.1.8"
faiss-cpu = {version = "^1.9.0"}
click = ">=8.1.7"
kubernetes = ">=31.0.0"
streamlit = "^1.40.1"
autogen-agentchat = {version=">=0.4.0.dev6", allow-prereleases = true}
autogen-ext = {version=">=0.4.0.dev6", allow-prereleases = true, extras=["docker"]}

[tool.poetry.group.dev.dependencies]
httpx = {extras = ["socks"], version = "^0.26.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
